# chess

./: .gitignore  Cargo.toml  README.md
backend/: Cargo.toml
backend/migrations/: 20210529203717_michess_development.sql  20210619020107_michess_development.sql
backend/src/: auth.rs  db.rs  error.rs  main.rs  model.rs
backend/src/model/: auth_info.rs  user.rs
src/: main.rs
ui/: Cargo.toml  Makefile.toml  index.html
ui/src/: assets.rs  main.rs  page.rs
ui/src/page/: game.rs  home.rs  landing.rs  login.rs  not_found.rs  register.rs
