[package]
name = "backend"
version = "0.1.0"
authors = ["xngln <davxliu@gmail.com>"]
edition = "2018"

[dependencies]
async-graphql = { version = "2.8.5" }
async-graphql-warp = { version = "2.8.5" }
warp = "0.3.1"
dotenv = "0.15.0"
http = "0.2"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.5.5", default-features = false, features = [ "runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "json" ] }
tokio = { version = "1.6.0", features = ["full"] }
thiserror = "1.0"