[package]
name = "backend"
version = "0.1.0"
authors = ["xngln <davxliu@gmail.com>"]
edition = "2018"

[dependencies]
argonautica = "0.2.0"
async-graphql = { version = "2.8.5" }
async-graphql-warp = { version = "2.8.5" }
chrono = "0.4"
dotenv = "0.15.0"
http = "0.2"
jsonwebtoken = "7"
rand = "0.8.3"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.5.5", default-features = false, features = [ "runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "json" ] }
thiserror = "1.0"
tokio = { version = "1.6.1", features = ["full"] }
warp = "0.3.1"